2007-07-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Make the regexp more
	global matching.
	(tramp-send-command-and-read): Search for trash after the regexp
	until eol only.  In XEmacs, there is a problem with \n.

2007-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in:
	* tramp.el:
	* tramp-efs.el:
	* tramp-util.el:
	* tramp-uu.el:
	* trampver.el.in: Use utf-8 encoding with coding cookie.

	* tramp-cache.el:
	* tramp-fish.el:
	* tramp-ftp.el:
	* tramp-gw.el:
	* tramp-smb.el: Remove coding cookie.

	* tramp.el (tramp-handle-verify-visited-file-modtime): Flush
	buffer file-name's file property.
	(tramp-handle-file-remote-p): The first parameter is FILENAME.

2007-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes)
	(tramp-handle-file-attributes-with-stat)
	(tramp-handle-directory-files-and-attributes-with-stat)
	(tramp-convert-file-attributes): Handle huge file sizes.

2007-07-22  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.10 released.

	* tramp.el (tramp-get-ls-command): Fyx typo.

2007-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
	IDENTIFICATION.

	* tramp-util.el (tramp-advice-file-remote-p): Handle optional
	parameter IDENTIFICATION.

2007-07-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-set-file-times): New defun.  Replaces
	`tramp-touch'.
	(tramp-file-name-handler-alist, tramp-file-name-for-operation):
	Add entry for `set-file-times'.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-out-of-band): Use `set-file-times'.
	(tramp-handle-unhandled-file-name-directory): Rewrite.
	(tramp-convert-file-attributes): Add error handling when inode is
	extraordinary big.
	(tramp-get-inode): Change parameter from FILE to VEC.

	* tramp-fish.el (tramp-fish-file-name-handler-alist): Add entry